Hid navigation bar

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
         <div class="titleText"><h1>Welcome to Bobweb.page</h1></div>
         <div class="titleCaption"><p>The place for all of your Bob related needs</p></div>
     </header>
-    <nav>
+    <!-- <nav>
         <ul>
             <li>Home</li>
             <li>News</li>
             <li>List</li>
             <li>Contact</li>
         </ul>
-    </nav>
+    </nav> -->
     <main>
         <div class="center">
             <h2>These are the Bobs</h2>
