Orgagnized files in respective folders

--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="template.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header>
-        <div class="titleText"><h1>Title</h1></div>
+        <div class="titleText"><h1>Welcome to Bobweb.page</h1></div>
+        <div class="titleCaption"><p>The place for all of your Bob related needs</p></div>
     </header>
     <nav class="navigator">
         <ul>
@@ -16,7 +17,12 @@
     </nav>
     <br>
     <main>
-        <p>Text text text</p>
+        <div class="center">
+            <h2>These are the Bobs</h2>
+        </div>
+        <div class="central-block">
+            <img src="../images/cast.png" alt="The Bob Crew">
+        </div>
     </main>
     <footer>
         <div class="center"><p>Made with <3 </p></div>
