--- a/html/blankPage.html
+++ b/html/blankPage.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/template.css">
 </head>
 <body>
     <header>
-        <div class="titleText"><h1>Welcome to Bobweb.page</h1></div>
-        <div class="titleCaption"><p>The place for all of your Bob related needs</p></div>
+        <div class="titleText"><h1>Title</h1></div>
     </header>
     <nav class="navigator">
         <ul>
@@ -17,12 +16,7 @@
     </nav>
     <br>
     <main>
-        <div class="center">
-            <h2>These are the Bobs</h2>
-        </div>
-        <div class="central-block">
-            <img src="cast.png" alt="The Bob Crew">
-        </div>
+        <p>Text text text</p>
     </main>
     <footer>
         <div class="center"><p>Made with <3 </p></div>
