--- a/html/news.html
+++ b/html/news.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="template.css">
+    <link rel="stylesheet" href="../css/template.css">
 </head>
 <body>
     <header>
@@ -9,9 +9,9 @@
     <nav class="navigator">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="news.html">News</a></li>
+            <li><a class = "active" href="news.html">News</a></li>
             <li><a href="list.html">List</a></li>
-            <li><a class = "active" href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <br>
