--- a/html/news.html
+++ b/html/news.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="../css/template.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header>
-        <div class="titleText"><h1>Title</h1></div>
+        <div class="titleText"><h1>Bob News</h1></div>
     </header>
     <nav class="navigator">
         <ul>
@@ -16,7 +16,7 @@
     </nav>
     <br>
     <main>
-        <p>Text text text</p>
+        <p>Coming soon</p>
     </main>
     <footer>
         <div class="center"><p>Made with <3 </p></div>
