--- a/html/blankPage.html
+++ b/html/blankPage.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <header>
-        <div class="titleText"><h1>Title</h1></div>
+        <div class="titleText"><h1>Template</h1></div>
     </header>
     <nav class="navigator">
         <ul>
