--- a/html/list.html
+++ b/html/list.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="../css/template.css">
+    <link rel="stylesheet" href="../css/index.css">
 </head>
 <body>
     <header>
-        <div class="titleText"><h1>Title</h1></div>
+        <div class="titleText"><h1>The List of Bobs</h1></div>
     </header>
     <nav class="navigator">
         <ul>
@@ -16,10 +16,13 @@
     </nav>
     <br>
     <main>
-        <p>Text text text</p>
+        <p>Coming soon</p>
     </main>
+
+
+
     <footer>
-        <div class="center"><p>Made with <3 </p></div>
+        <p>Made with <3 </p>
     </footer>
 </body>
 
