Moved index.html to main folder

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
@@ -9,10 +9,10 @@
     </header>
     <nav class="navigator">
         <ul>
-            <li><a class = "active" href="index.html">Home</a></li>
-            <li><a href="news.html">News</a></li>
-            <li><a href="list.html">List</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a class = "active" href="html/index.html">Home</a></li>
+            <li><a href="html/news.html">News</a></li>
+            <li><a href="html/list.html">List</a></li>
+            <li><a href="html/contact.html">Contact</a></li>
         </ul>
     </nav>
     <br>
@@ -21,7 +21,7 @@
             <h2>These are the Bobs</h2>
         </div>
         <div class="central-block">
-            <img src="../images/cast.png" alt="The Bob Crew">
+            <img src="images/cast.png" alt="The Bob Crew">
         </div>
     </main>
     <footer>
