--- a/html/news.html
+++ b/html/news.html
@@ -8,7 +8,7 @@
     </header>
     <nav class="navigator">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a class = "active" href="news.html">News</a></li>
             <li><a href="list.html">List</a></li>
             <li><a href="contact.html">Contact</a></li>
