Cleaned up css and updated style

--- a/html/news.html
+++ b/html/news.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/template.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
-        <div class="titleText"><h1>Bob News</h1></div>
-    </header>
-    <nav class="navigator">
-        <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a class = "active" href="news.html">News</a></li>
+    <nav>
+        <ul class="navigator">
+            <li class="leftAlign"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">BobWeb.Page</a></li>
+            <li class="rightAlign"><a href="../index.html">Home</a></li>
+            <li><a class = "active"  href="news.html">News</a></li>
             <li><a href="list.html">List</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-    <br>
+
+    <header>
+        <h1>News</h1>
+    </header>
+
     <main>
-        <p>Coming soon</p>
+        <div class="textbox">
+            <p>Coming soon</p>
+        </div>
+
     </main>
     <footer>
-        <div class="center"><p>Made with <3 </p></div>
+        <div class="Message"><p>Made with &#129505 </p></div>
     </footer>
 </body>
 
