--- a/html/template.html
+++ b/html/template.html
@@ -7,21 +7,20 @@
     <nav>
         <ul class="navigator">
             <li class="leftAlign"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">BobWeb.Page</a></li>
-            <li class="rightAlign"><a href="../index.html">Home</a></li>
+            <li class="rightAlign"><a class = "active" href="../index.html">Home</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="list.html">List</a></li>
-            <li><a class = "active"  href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
     <header>
-        <h1>Contact</h1>
+        <h1>Template</h1>
     </header>
 
     <main>
         <div class="textbox">
-            <p>Follow @FakeBobImposter on isntagram</p>
-            <p>Coming soon</p>
+            
         </div>
 
     </main>
