--- a/index.html
+++ b/index.html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/template.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <header>
-        <div class="titleText"><h1>Welcome to Bobweb.page</h1></div>
-        <div class="titleCaption"><p>The place for all of your Bob related needs</p></div>
-    </header>
-    <nav class="navigator">
-        <ul>
-            <li><a class = "active" href="html/index.html">Home</a></li>
+    <nav>
+        <ul class="navigator">
+            <li class="leftAlign"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">BobWeb.Page</a></li>
+            <li class="rightAlign"><a class = "active" href="index.html">Home</a></li>
             <li><a href="html/news.html">News</a></li>
             <li><a href="html/list.html">List</a></li>
             <li><a href="html/contact.html">Contact</a></li>
         </ul>
     </nav>
-    <br>
+
+    <header>
+        <h1>Welcome to BobWeb.Page!</h1>
+        <h2>The place for all your bob related needs</h2>
+    </header>
+
     <main>
-        <div class="center">
-            <h2>These are the Bobs</h2>
+        <div class="header">
+            <h1>These are the Bobs</h1>
         </div>
-        <div class="central-block">
-            <img src="images/cast.png" alt="The Bob Crew">
-        </div>
+        <img src="images/cast.png" alt="The Bob Crew">
     </main>
     <footer>
-        <div class="center"><p>Made with <3 </p></div>
+        <div class="Message"><p>Made with &#129505 </p></div>
     </footer>
 </body>
 
