Started implementing js

--- a/html/balls.html
+++ b/html/balls.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet"type="text/css"  href="../css/template.css">
-    <link rel="stylesheet" type="text/css" href="../css/mediaQuery.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css"  href="../css/balls.css">
+    <link rel="stylesheet" type="text/css"  href="../css/template.css">
 </head>
 <body>
+    <script src="../javascript/balls.js"></script>
     <nav>
         <ul class="navigator">
             <li class="leftAlign"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">BobWeb.Page</a></li>
@@ -14,26 +14,21 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
     <header>
-        <h1>Template</h1>
+        <h1>
+            Balls
+        </h1>
     </header>
-
     <main>
-        <div class="textbox">
-            
-        </div>
-
+        <button onclick="doThing()">Click me</button>
+        <p id="output">Test</p>
+        <canvas id="theCanvas" style ="border:2px solid"></canvas>
     </main>
 
-    
     <footer>
         <div class="Message"><p>Made with &#129505 </p></div>
     </footer>
-
 </body>
-
-
 
 
 </html>
