--- a/html/list.html
+++ b/html/list.html
@@ -11,6 +11,7 @@
             <li><a href="news.html">News</a></li>
             <li><a class = "active"  href="list.html">List</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="balls.html">Billiards</a></li>
         </ul>
     </nav>
 
