--- a/html/contact.html
+++ b/html/contact.html
@@ -11,6 +11,8 @@
             <li><a href="news.html">News</a></li>
             <li><a href="list.html">List</a></li>
             <li><a class = "active"  href="contact.html">Contact</a></li>
+            <li><a href="balls.html">Billiards</a></li>
+            
         </ul>
     </nav>
 
