--- a/html/template.html
+++ b/html/template.html
@@ -12,6 +12,7 @@
             <li><a href="news.html">News</a></li>
             <li><a href="list.html">List</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="balls.html">Billiards</a></li>
         </ul>
     </nav>
 
