--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <li><a href="html/news.html">News</a></li>
             <li><a href="html/list.html">List</a></li>
             <li><a href="html/contact.html">Contact</a></li>
+            <li><a href="html/balls.html">Billiards</a></li>
         </ul>
     </nav>
 
