Added sound effects page

--- a/html/list.html
+++ b/html/list.html
@@ -12,6 +12,7 @@
             <li><a class = "active"  href="list.html">List</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="balls.html">Billiards</a></li>
+            <li><a href="soundEffects.html">Sound Effects</a></li>
         </ul>
     </nav>
 
@@ -21,7 +22,43 @@
 
     <main>
         <div class="textbox">
-            <p>Coming soon</p>
+            <p>Bob - the og</p>
+        </div>
+        <div class="textbox">
+            <p>Fake Bob - the 2nd og</p>
+        </div>
+        <div class="textbox">
+            <p>Fake Bob Imposter (FBI) - the beloved</p>
+        </div>
+        <div class="textbox">
+            <p>Tiny Bob Dunce (TBD) - the smol</p>
+        </div>
+        <div class="textbox">
+            <p>Yob - yarn bob</p>
+        </div>
+        <div class="textbox">
+            <p>Pog - the pig</p>
+        </div>
+        <div class="textbox">
+            <p>Fake Pog Swine - the 2nd pig</p>
+        </div>
+        <div class="textbox">
+            <p>Fake Physics Student - he just like me frfr</p>
+        </div>
+        <div class="textbox">
+            <p>sBorf - the s is silent</p>
+        </div>
+        <div class="textbox">
+            <p>MoAB - the allmighty and mysterious</p>
+        </div>
+        <div class="textbox">
+            <p>Dolphin the Goal - he exists</p>
+        </div>
+        <div class="textbox">
+            <p>Ken - you know, like chicKEN</p>
+        </div>
+        <div class="textbox">
+            <p>Perry - hes a platapus</p>
         </div>
 
     </main>
