--- a/html/template.html
+++ b/html/template.html
@@ -13,6 +13,7 @@
             <li><a href="list.html">List</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="balls.html">Billiards</a></li>
+            <li><a href="soundEffects.html">Sound Effects</a></li>
         </ul>
     </nav>
 
