--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="html/list.html">List</a></li>
             <li><a href="html/contact.html">Contact</a></li>
             <li><a href="html/balls.html">Billiards</a></li>
+            <li><a href="html/soundEffects.html">Sound Effects</a></li>
         </ul>
     </nav>
 
