--- a/html/contact.html
+++ b/html/contact.html
@@ -12,6 +12,7 @@
             <li><a href="list.html">List</a></li>
             <li><a class = "active"  href="contact.html">Contact</a></li>
             <li><a href="balls.html">Billiards</a></li>
+            <li><a href="soundEffects.html">Sound Effects</a></li>
             
         </ul>
     </nav>
