--- a/html/news.html
+++ b/html/news.html
@@ -12,6 +12,7 @@
             <li><a href="list.html">List</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="balls.html">Billiards</a></li>
+            <li><a href="soundEffects.html">Sound Effects</a></li>
         </ul>
     </nav>
 
@@ -21,7 +22,7 @@
 
     <main>
         <div class="textbox">
-            <p>Coming soon</p>
+            <p>May 3: SPS Elections on Thursday!</p>
         </div>
 
     </main>
