Added sound effects section, updated billiards

--- a/html/balls.html
+++ b/html/balls.html
@@ -16,7 +16,7 @@
             <li><a href="soundEffects.html">Sound Effects</a></li>
         </ul>
     </nav>
-    <header><h1>Billiards(In Progress)</h1></header>
+    <header><h1>Billiards</h1></header>
     <div class="buttons">
             <button onclick="start()">Start</button>
             <button onclick="stop()">Stop</button>
