--- a/html/soundEffects.html
+++ b/html/soundEffects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+    <title>Sound Board</title>
     <link rel="stylesheet"type="text/css"  href="../css/template.css">
     <link rel="stylesheet" type="text/css" href="../css/sounds.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,9 +24,9 @@
 
     <main>
         <script src="../javascript/sounds.js"></script>
-        <button id="0" onclick="playEffect(0)">0</button> 
-        <button id="1" onclick="playEffect(1)">1</button>
-        <button id="2" onclick="playEffect(2)">2</button>
+        <button id="0" onclick="playEffect(0)">Sheep Bleating</button> 
+        <button id="1" onclick="playEffect(1)">Wolves Howl</button>
+        <button id="2" onclick="playEffect(2)">Crowd</button>
         <button id="3" onclick="playEffect(3)">3</button>
         <button id="4" onclick="playEffect(4)">4</button>
         <button id="5" onclick="playEffect(5)">5</button>
