--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="css/template.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="index.js"></script>
 </head>
 <body>
     <nav>
@@ -20,8 +21,7 @@
         <h1>Welcome to BobWeb.Page!</h1>
         <h2>The place for all your bob related needs</h2>
     </header>
-    
-    <h1><a href="spswebsiteTEMP/spsstonybrook.github.io/index.html">Please click here</a></h1>
+
     
 
     <main>
