Added temp link to spswebsite

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="header">
             <h1>These are the Bobs</h1>
         </div>
+        <a href="spsstonybrook.github.io_copy/index.html">temp</a>
         <img src="images/cast.png" alt="The Bob Crew">
     </main>
     <footer>
